<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email:</string>
    <string name="email_edittext">Enter your email</string>
    <string name="password_text">Password:</string>
    <string name="password_edit">Enter your password</string>
    <string name="email_text_hint">Type your email</string>
    <string name="password_edit_hint">Type your password here</string>
    <string name="setup_button">Setup</string>
    <string name="login_button">login</string>
    <string name="welcomeh_text">Hi there, welcome!</string>
    <string name="welcomeb_text">to the best Shoes App Ever</string>
    <string name="go_ahead">Go Ahead</string>
    <string name="login_image_description">Login Image</string>
    <string name="instructionsh_text">Make a list of shoes</string>
    <string name="instructionsb_text">With its features and save them</string>
    <string name="start_button">Start</string>
    <string name="instruction_image_description">Image with a pencil</string>
</resources>
